--- a/instaclone/templates/Login.html
+++ b/instaclone/templates/Login.html
@@ -1,6 +1,6 @@
 {%load staticfiles%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html"><head>
 
     <meta charset="UTF-8">
     <title>Login</title>
@@ -38,8 +38,9 @@
   <input id="password" type="password" name="password" placeholder="Your password" value={{password}}><br>
   <input type="submit" value="Login">
 </form>
-</body>
-</head>
+    </body>
+
+
 
 
 </html>
