--- a/instaclone/templates/Signup.html
+++ b/instaclone/templates/Signup.html
@@ -1,6 +1,6 @@
 {%load staticfiles%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html"><head>
 
     <meta charset="UTF-8">
   <title>Signup</title>
@@ -40,7 +40,7 @@
 </form>
   <div><h4>Already have an account? </h4><a href="Login/"> Login</a> </div>
 </body>
-</head>
+
 
 
 </html>
