--- a/instaclone/templates/UserPost.html
+++ b/instaclone/templates/UserPost.html
@@ -1,16 +1,18 @@
 {% load staticfiles %}
-<!DOCTYPE html>
 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>InstaClone</title>
+    <title>User Posts</title>
 </head>
 <body>
-    <form method="POST" action="/Post/">
+<form method="post" action="/Post/">
         {% csrf_token %}
         <input type="submit" class="btn-default btn" value="Create Post">
-    </form>
+    </form><br>
+
+    <a href="{%url 'Logout'%}">Logout</a>
 
 
     {% for post in posts %}
@@ -27,7 +29,7 @@
         <div style="display:inline-block">
             <form method="POST" action="/Like/">
               {% csrf_token %}
-              <input type="hidden" name="post" value="{{ post.id }}" >
+              <input type="hidden" name="post" value="{{ post.id }}" />
                 {% if post.has_liked %}
                 <input type="submit" class="btn btn-default" value="Unlike">
                 {% else %}
@@ -42,22 +44,12 @@
                 <input type="hidden" name="post" value="{{ post.id }}" />
                 <input type="text" name="comment_text" id="comment_text" placeholder="Make a comment.." value="{{ comment_text }}">
                 {{ comment_text }}
-                <input type="submit" class="btn-default btn" value="Comment"><br>
+
+                <input type="submit" class="btn-default btn" value="Comment">
             </form>
         </div>
 
-        <div>
-            {% for comment in post.comments %}
-                <p><b>{{ comment.user.username }} [{{ comment.created_on }}]:</b> {{ comment.comment_text }}</p>
-            {% endfor %}
-        </div>
 
-    {% endfor %}
-         <div>
-            <form method="POST" action="/Logout/">
-                {% csrf_token %}
-                <input type="submit" class="btn-default btn" value="Logout">
-            </form>
-        </div>
+
 </body>
 </html>
